# Capstone_project-Wifaqa-

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_pipline.py  styles.py
data/resumes/extracted_text/demo/: cv3.txt  cv6.txt  cv8.txt
data/resumes/structured_json/: 13405733.json  13477922.json  Hanan ZainAldeen-cv.json  cv1.json  cv2.json  cv3.json  cv4.json  cv5.json  cv6.json  cv7.json  cv8.json  cv9.json
data/resumes/structured_json_normalized_skills/: 13405733.json  13477922.json  Hanan ZainAldeen-cv.json  cv1.json  cv2.json  cv3.json  cv4.json  cv5.json  cv6.json  cv7.json  cv8.json  cv9.json
data/sessions/Data Science/: job_description.json
data/sessions/IT Tamheer/: job_description.json  job_description.txt
data/sessions/IT Tamheer2/: job_description.json
data/sessions/Webook_software_eng/: job_description.json  job_description.txt
data/sessions/demo/: job_description.json  job_description.txt
docs/: architecture.md
notebooks/: week6_extraction_deom.ipynb
src/chat/: chat_engine.py  hybrid_search.py
src/extraction/: job_description_to_json.py  resume_to_json.py  schema.py
src/indexing/: build_index.py  schema_to_chunks.py
src/ingestion/: pdf_loader.py  text_cleaner.py
src/matching/: explain_matching.py  fit_score.py  llm_matcher.py  rule_based_matcher.py  semantic_retriever.py
src/pipline/: pdf_to_json.py  run_matching.py  save_job_description.py  session_utils.py
src/utils/: apply_skill_normalization.py  resume_text.py  skill_normalizer.py  skills_deterministic.py
(+130 files in other folders)
