[project]
name = "capstone-project-wifaqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "openai>=2.15.0",
    "pymupdf>=1.26.7",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.2",
    "streamlit>=1.53.1",
]
